@@ -1,0 +1,2 @@
+take all
+quit
